--- a/src/template/templates/single_mode/.env.example
+++ b/src/template/templates/single_mode/.env.example
@@ -12,8 +12,10 @@ DATABASE_URL=postgresql://postgres:password@localhost/{{project_name}}
 
 {{#if has_auth}}
 # Authentication
-# Generate a secure secret key for production!
-JWT_SECRET=your-secret-key-min-32-chars
+# ⚠️  IMPORTANT: Generate a secure secret key for production!
+# ⚠️  Generate with: openssl rand -base64 32
+# ⚠️  DO NOT use the example value in production!
+JWT_SECRET=change-this-to-a-secure-random-secret-min-32-chars
 {{/if}}
 
 # Logging
